<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
    tools:context=".libreActividad">

        <ImageView
        android:id="@+id/imageView"
        android:layout_width="93dp"
        android:layout_height="85dp"
            android:layout_marginStart="150dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="11dp"
            android:layout_marginRight="60dp"
            android:src="@drawable/lad"
            android:contentDescription="@string/ladrillo" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="282dp"
        android:onClick="zoom"
        android:text="@string/clockwise" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="281dp"
        android:onClick="clockwise"
        android:text="@string/zoom" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:onClick="blink"
        android:text="@string/blink" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_toStartOf="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:onClick="slide"
        android:text="@string/slide" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:onClick="move"
        android:text="@string/move" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:onClick="fade"
        android:text="@string/fade" />

</RelativeLayout>